updates to task: Stanton 4-6

--- a/journal/modernized/04-chapter-4.adoc
+++ b/journal/modernized/04-chapter-4.adoc
@@ -733,8 +733,10 @@ and glory be given to Him the great and awful Majesty in heaven!
 [.embedded-content-document.epistle]
 --
 
-[.signed-section-context-open]
+[.letter-heading]
 Epistle to Friends at their monthly meeting at Perquimans in North Carolina, Philadelphia.
+
+[.signed-section-context-open]
 Tenth month 2nd, 1761.
 
 [.salutation]
