--- a/journal/modernized/04-chapter-4.adoc
+++ b/journal/modernized/04-chapter-4.adoc
@@ -734,10 +734,10 @@ and glory be given to Him the great and awful Majesty in heaven!
 --
 
 [.letter-heading]
-Epistle to Friends at their monthly meeting at Perquimans in North Carolina, Philadelphia.
+Epistle to Friends at their monthly meeting at Perquimans in North Carolina.
 
 [.signed-section-context-open]
-Tenth month 2nd, 1761.
+Philadelphia, Tenth month 2nd, 1761.
 
 [.salutation]
 Dear Friends,
