spell Catherine Payton with an E

--- a/journal/modernized/03-chapter-3.adoc
+++ b/journal/modernized/03-chapter-3.adoc
@@ -564,7 +564,7 @@ From hence I went forward into several counties,
 and was at a number of meetings in different places,
 which I hope were of profit to the people,
 and in some places they were large at two of them I had the company
-of my beloved friends Catharine Payton and Rachel Wilson,
+of my beloved friends Catherine Payton and Rachel Wilson, they
 they being on their way to the yearly meeting at London.
 We went forward together to Reading,
 where I met with my dear worthy friend Samuel Hopwood, with whom when in Pennsylvania,
