update spelling: court-house > courthouse

--- a/journal/modernized/04-chapter-4.adoc
+++ b/journal/modernized/04-chapter-4.adoc
@@ -385,7 +385,7 @@ From there we came to the widow Lupton`'s at Back creek, and had two meetings,
 weighty to my spirit, and I hope to the edification of others;
 I thought there was a number of valuable Friends in these parts.
 
-We had a large meeting of Friends and others, in the court-house, at Winchester;
+We had a large meeting of Friends and others, in the courthouse, at Winchester;
 after it was ended,
 several persons of note not professing with us behaved in a very loving friendly manner;
 in going from there I possessed sweet peace in my own mind, and went to Robert Haines`'s,
