meetinghouse not meeting( |-)house

--- a/journal/modernized/03-chapter-3.adoc
+++ b/journal/modernized/03-chapter-3.adoc
@@ -490,7 +490,7 @@ the next place I went to was Shrewsbury, where, in company with several Friends,
 I visited two dear Friends who were in prison on account of tithes;
 our hearts being tendered together, we had to praise the Lord, and were comforted,
 although in such a place of outward confinement;
-I was also at a meeting in the meeting-house which though not large, was I hope well.
+I was also at a meeting in the meetinghouse which though not large, was I hope well.
 
 From hence I went into Wales, with John Fowler, a solid young man,
 who though not a public minister, came out of Warwickshire on purpose to accompany me.
