--- a/journal/original/04-chapter-4.adoc
+++ b/journal/original/04-chapter-4.adoc
@@ -128,7 +128,7 @@ where we attended a meeting at each meetinghouse,
 and it was cause of gladness to see an increase of tender-minded Friends thereaway.
 Not having been there for many years,
 there appeared a revival of love for Truth and zeal for the same;
-since my being last there they had built a meeting-house,
+since my being last there they had built a meetinghouse,
 in which we had a powerful satisfactory meeting.
 We crossed the river to Cape-May, and had a meeting at the widow Townsend`'s,
 and one in the evening at her son`'s,
@@ -482,7 +482,7 @@ I thought, for this remote part of the world;
 it had a humbling reach on some who were present, I hope.
 We lodged at William Hall`'s, and from thence went to the Wateree in South Carolina,
 accompanied by William Hall, Francis Clark, Jeremiah Picket, and Andrew Morman,
-lodged at Samuel Wiley`'s. We had a tender broken meeting at the meeting house,
+lodged at Samuel Wiley`'s. We had a tender broken meeting at the meetinghouse,
 much to satisfaction, and a pretty good time at the house of a Friend who was indisposed;
 also a solid time with a number of Catawba Indians, and then returned to Pee-dee.
 
@@ -501,7 +501,7 @@ Next morning we set forward and got to Richard Bradley`'s, at Cross creek in Cap
 where is a small town lately built; we had a meeting in it,
 to which came a pretty many people, some of whom were Friends,
 and it was to some satisfaction.
-Our next meeting was at the meeting-house at Dann`'s creek, which was a laborious time,
+Our next meeting was at the meetinghouse at Dann`'s creek, which was a laborious time,
 and I wish it may have a good effect on the minds of the people,
 for I trust they were faithfully warned,
 both on account of their slothfulness in the things of God, and the things of this world.
