--- a/journal/original/05-chapter-5.adoc
+++ b/journal/original/05-chapter-5.adoc
@@ -20,7 +20,7 @@ From this Friend`'s we went to Sassafras meeting, where came a number of people,
 with whom I hope the power of truth had a tender reach on the hearts of several;
 next at Cecil meeting,
 in which the spring of life was I thought opened to solid comfort among us.
-We had the next day a meeting at Chester meeting-house, attended with hard labour,
+We had the next day a meeting at Chester meetinghouse, attended with hard labour,
 and one in the evening at James Claypool`'s in Chester-town, which was solid;
 from thence we came to Queen Ann`'s, and had a large satisfactory meeting,
 in which I had some relief of mind,
@@ -147,7 +147,7 @@ We were next at Oblong meeting, at which was a large number of people,
 who were faithfully warned and advised to keep in the fear of God,
 and Truth seemed to have a reach on the hearts of some;
 then went to Dobson Wheeler`'s at New Milford in Connecticut,
-and the day following we were at a large meeting in the meeting-house,
+and the day following we were at a large meeting in the meetinghouse,
 where was a marriage, and a laborious time to my spirit among the people,
 but I hope of some service,
 their behaviour being in the main as well as might be expected,
@@ -334,7 +334,7 @@ I went home with Japhet Leeds, and he accompanied me that evening to Joseph Mape
 where we lodged, and the next day were at a meeting near his house;
 from thence proceeded to Cape May, in company with some Fi lends.
 Lodged at Isaac Townsend`'s, and was the next day at a large meeting for that place,
-at the Lower meeting house, to some degree of satisfaction,
+at the Lower meetinghouse, to some degree of satisfaction,
 in which I laboured to turn the minds of the people
 to Christ our free and infallible teacher,
 and there appeared a tender-hearted few among them.
