--- a/journal/modernized/06-chapter-6.adoc
+++ b/journal/modernized/06-chapter-6.adoc
@@ -255,7 +255,7 @@ finished his course in full unity with us,
 and universally beloved by his fellow citizens, on the 28th day of the sixth month, 1770,
 in the 62nd year of his age, and the 43rd of his ministry.
 His body was the next day attended by a large number of people
-of various religious denominations to our meeting house,
+of various religious denominations to our meetinghouse,
 and afterwards interred in Friends burial ground in this city.
 
 [.signed-section-context-close]
@@ -357,7 +357,7 @@ and has received the reward of the righteous.
 
 His body was attended by a great number of Friends and others,
 his fellow-citizens of various religious denominations,
-to our meeting-house in High-street, on the 24th of the third month, 1768,
+to our meetinghouse in High-street, on the 24th of the third month, 1768,
 and after a solemn meeting, in which several living testimonies were borne,
 was interred in our burial ground in this city.
 
