update 'espy/espied' in modernized editions

--- a/journal/modernized/02-chapter-2.adoc
+++ b/journal/modernized/02-chapter-2.adoc
@@ -229,7 +229,7 @@ apprehending the vessel might be soon dashed to pieces,
 and we might suddenly lose our lives.
 But I had reason to believe that the gracious and
 merciful Being was pleased to hear our cries,
-for the nearer we came to the land the fog cleared away, and they espied a vessel,
+for the nearer we came to the land the fog cleared away, and they caught sight of a vessel,
 which as we approached,
 we discovered was laying at anchor at the mouth of Kinsale harbour,
 where we wanted to be, and as we came on our way, the harbour appeared plain.
