fix accidentally doubled words from lint auto-fix

--- a/journal/modernized/04-chapter-4.adoc
+++ b/journal/modernized/04-chapter-4.adoc
@@ -36,7 +36,7 @@ with my dear friend Israel Pemberton as far as Boston in New England;
 and as we went forward were at a comfortable meeting at New York;
 from which we went by water to Newport, Rhode-Island,
 and arrived there the evening before the yearly meeting,
-at which were our friends Catherine Payton from England, and Mary Peisley from Ireland. The
+at which were our friends Catherine Payton from England, and Mary Peisley from Ireland.
 The gathering of people was great and much mixed,
 the love of God in Christ was truly preached, and lovingly extended to them,
 and I hope it was a good meeting to many.
@@ -106,7 +106,7 @@ that hold the truth in unrighteousness,) are not
 to be forgotten by those left behind while in mutability,
 who have had the benefit of his gospel labours and rightly esteem them.
 
-I also accompanied our dear friend Catherine Payton, with several friends of our city, to
+I also accompanied our dear friend Catherine Payton, with several friends of our city,
 to visit the families of many of our fellow members,
 which service I think it may be thankfully said the Lord owned,
 the states and conditions of the people being suitably spoken to.
