--- a/journal/original/03-chapter-3.adoc
+++ b/journal/original/03-chapter-3.adoc
@@ -103,9 +103,9 @@ his dear wife having visited America, I had seen her in my native land;
 she was a worthy and serviceable instrument in the Lord`'s
 hand to many I believe where her lot was cast.
 Hence I went to Carlow, where the meeting was to me laborious; then to John Lake`'s,
-Ballitore, Athlone, and Mountmelick,
+Ballitore, Athlone, and Mountmellick,
 some of which meetings were comfortable satisfactory seasons.
-At Mountmelick, I lodged at Joshua Strangman`'s,
+At Mountmellick, I lodged at Joshua Strangman`'s,
 with whom I had great nearness in spirit,
 and thought him to be a hopeful young man in the way of Truth,
 and my soul possessed sweet peace under his roof.
