update abbreviation: jun. > Jr.

--- a/journal/original/05-chapter-5.adoc
+++ b/journal/original/05-chapter-5.adoc
@@ -179,7 +179,7 @@ The next day we attended the meeting at the Purchase, which was large,
 also visited a family in affliction, both which were solid seasons;
 lodged that evening at Edward Burling`'s,
 and had a solid sitting in that Friend`'s hopeful family of young people.
-Our next meeting was at Mamaroneck, then at West Chester, where came Samuel Emlen, jun.,
+Our next meeting was at Mamaroneck, then at West Chester, where came Samuel Emlen, Jr.,
 John Haydock, and Haydock Bowne from New York, to see us;
 their company afforded much comfort to my spirit;
 this meeting being attended with life and near unity,
@@ -528,7 +528,7 @@ which was comfortably attended with the love of God, and with near unity with Fr
 After meeting dined at Mahlon Kirkbride`'s, then rode through Delaware ford,
 and that day reached Samuel Worth`'s, and the next Joseph Shot well`'s,
 and the day following being the first of the week, was at two meetings at Rahway,
-with our friend Samuel Emlen, jun., to some degree of satisfaction.
+with our friend Samuel Emlen, Jr., to some degree of satisfaction.
 
 I then went with him and several other Friends to New York,
 and engaged with him in visiting the families of Friends in that city,
